--- a/templates/TF-Inverted/detail_dokumen.html
+++ b/templates/TF-Inverted/detail_dokumen.html
@@ -6,7 +6,7 @@ content %}
   <p class="detail-link">
     <strong>Link:</strong> <a href="{{ link }}" target="_blank">{{ link }}</a>
   </p>
-  <a href="/" class="btn btn-secondary mt-3">Kembali ke KuluKulu</a>
+  <a href="/tf-inverted" class="btn btn-secondary mt-3">Kembali ke KuluKulu</a>
 </div>
 
 {% endblock content %}
