--- a/templates/TF-Inverted/nav.html
+++ b/templates/TF-Inverted/nav.html
@@ -2,7 +2,7 @@
     <div class="container">
       <div class="justify-content-end">
         {% if current_path == '/data-scraping' %}
-          <a class="btn btn-custom" href="/">Kembali ke KuluKulu</a>
+          <a class="btn btn-custom" href="/tf-inverted">Kembali ke KuluKulu</a>
         {% else %}
           <a class="btn btn-custom" href="/data-scraping">Data</a>
         {% endif %}
